# TensorFlores

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: emission_total.csv
examples/01_example_01/: Example_01.ipynb  tensorflores_without_quant.h
examples/02_example_02/: Example_02.ipynb  tensorflores_QAT_Autocloud.h  tensorflores_QAT_Autocloud.json
examples/03_example_03/: Example_03.ipynb  tensorflores_evolving_PQT.h  tensorflores_int8_PQT.h  tensorflores_without_quant.json
examples/03_example_03/result/: output_PQT_evolving.csv  output_PQT_int8.csv
examples/04_example_04/: Example_04.ipynb  model.keras  tensorflow_evolving.h  tensorflow_int8.h  tensorflow_model.h
examples/04_example_04/results/: output_tensorflow_cpp.csv
examples/05_auxiliary/: auxiliary.ipynb
examples/05_auxiliary/arduino_code/MLP/: MLP.ino  input_output.h  model.h
tensorflores/: __init__.py
tensorflores/models/: __init__.py  multilayer_perceptron.py
tensorflores/utils/: __init__.py  array_manipulation.py  clustering.py  cpp_generation.py  json_handle.py  quantization.py
tensorflores/utils/autocloud/: __init__.py  auto_cloud_bias.py  auto_cloud_weight.py  data_cloud_bias.py  data_cloud_weight.py
